--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
     <p id="ascendant-text"></p>
 
     <div id="chartContainer"></div>
-
+<div id="loadingMessage" style="display:none; text-align:center; font-size:18px; color:white;">
+    ⏳ يتم تحميل الخريطة الفلكية...
+</div>
     <!-- Wrapped Table Inside a Container -->
     <div id="tableContainer">
         <table id="dataTable">
